--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -1,24 +1,26 @@
 @import "tailwindcss";
 
 @theme {
-  --color-white:#fffff;
-  --color-gray-200:#e5e7eb;
-    --color-gray-300: #d1d5db;
+  --color-white: #fffff;
+  --color-gray-200: #e5e7eb;
+  --color-gray-300: #d1d5db;
   --color-gray-500: #6b7280;
   --color-gray-700: #374151;
   --color-gray-800: #1f2937;
-    --color-blue-200: #93c5fd;
+  --color-blue-200: #93c5fd;
   --color-blue-400: #60a5fa;
   --color-blue-500: #3b82f6;
-    --color-dark-bg: #101214;
+  --color-dark-bg: #101214;
   --color-dark-secondary: #1d1f21;
   --color-dark-tertiary: #3b3d40;
   --color-blue-primary: #0275ff;
   --color-stroke-dark: #2d3135;
-    --background-image-gradient-radial: radial-gradient(var(--tw-gradient-stops));
-  --background-image-gradient-conic: conic-gradient(from 180deg at 50% 50%, var(--tw-gradient-stops));
+  --background-image-gradient-radial: radial-gradient(var(--tw-gradient-stops));
+  --background-image-gradient-conic: conic-gradient(
+    from 180deg at 50% 50%,
+    var(--tw-gradient-stops)
+  );
 }
-
 
 *,
 *::before,
@@ -29,10 +31,10 @@
 html,
 body,
 #root,
-.app{
-  height:100%;
-  width:100%;
+.app {
+  height: 100%;
+  width: 100%;
   @apply text-sm;
-  @apply bg-gray-500;
-  @apply text-gray-900;
+  @apply bg-white;
+  @apply dark:bg-black;
 }
